--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@portis/web3": "^4.0.5",
     "@primer/css": "^14.4.0",
     "@snapshot-labs/lock": "github:becoswap/lock#master",
-    "@snapshot-labs/snapshot-spaces": "github:metaversethailand/snapshot-spaces#master",
-    "@snapshot-labs/snapshot.js": "github:metaversethailand/snapshot.js#master",
+    "@snapshot-labs/snapshot-spaces": "github:metaversethailand/snapshot-spaces#main",
+    "@snapshot-labs/snapshot.js": "github:metaversethailand/snapshot.js#main",
     "@toruslabs/torus-embed": "^1.12.2",
     "@vue/apollo-composable": "4.0.0-alpha.12",
     "@vueuse/core": "^5.2.0",
