--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_HUB_URL=http://localhost:8000
+VITE_HUB_URL=https://hub.metachain.asia
 VITE_IPFS_GATEWAY=gateway.ipfs.io
 VITE_DEFAULT_NETWORK=17
